# routes/api.php
@@ -17,6 +17,6 @@ Route::controller(CartController::class)->group(function () {
 
 Route::middleware(['web'])->controller(MessageController::class)->group(function () {
     Route::get('/community/messages', 'index')->name('messages.index');
-    Route::post('/community/messages', 'store')->name('messages.store');
+    Route::post('/community/messages', 'store')->name('messages.store')->middleware('auth');
     Route::delete('/community/messages/{message}', 'destroy')->name('messages.destroy');
 });
